--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 # Weather API Configuration
 # Get your API key from https://www.weatherapi.com/
 VITE_WEATHER_API_KEY=your_weather_api_key_here
+VITE_WEATHER_MAP_API_KEY=your_weather_map_api_key_here
 VITE_WEATHER_API_BASE_URL=https://api.weatherapi.com/v1
 
 # Application Configuration
